# sandbox-sentinel

./: .gitignore  CLAUDE.md  DEMO_STORY.md  PROMPTING_GUIDE.md  README.md  requirements.txt
.claude/skills/environment-adapter/: SKILL.md
.claude/skills/environment-adapter/stacks/: default.yaml
.github/: FUNDING.yml
001-langgraph-notebook-chatbot/: README.md  chatbot.py  metadata.json
001-langgraph-notebook-chatbot/examples/: demo.ipynb
002-sentinel-track/: LICENSE  README.md  basic_usage.py  hf_trainer_demo.py  metadata.json  sentinel_track.py
002-sentinel-track/examples/: basic_usage.py
003-datahub-lite/: README.md  datahub_lite.py  metadata.json
003-datahub-lite/examples/: basic_usage.py  export_to_datahub.py  import_from_datahub.py  tool_calling.py
003-datahub-lite/registry/: fetch_registry.py
003-langgraph-chat-repl/: LICENSE  README.md  basic_usage.py  metadata.json  repl.py
003-langgraph-chat-repl/examples/: basic_usage.py
004-langgraph-prompt-toolkit-repl/: README.md  basic_usage.py  metadata.json  repl.py
004-langgraph-prompt-toolkit-repl/examples/: basic_usage.py
005-sql-codemirror-runner/: LICENSE  README.md  _build.py  _template.py  demo.ipynb  metadata.json  sql_codemirror.py
005-sql-codemirror-runner/_assets/: codemirror.min.js  sql.min.js
005-sql-editor-notebook/: README.md  demo.ipynb  metadata.json  sql_editor.py
005-sql-editor-notebook/examples/: basic_usage.py  demo.ipynb  sql_editor_snapshot.html
006-sql-codemirror-runner/: README.md  _build.py  _template.py  demo.ipynb  metadata.json  sql_codemirror.py
006-sql-codemirror-runner/_assets/: show-hint.min.js
006-sql-codemirror-runner/examples/: demo.ipynb
006-sql-runner-notebook/: LICENSE  README.md  metadata.json  sql_runner.py
006-sql-runner-notebook/examples/: basic_usage.py  demo.ipynb
006-sql-tui-runner/: LICENSE  README.md  basic_usage.py  metadata.json  sql_tui.py
007-jupyterlab-sidebar-chatbot/: .gitignore  .yarnrc.yml  LICENSE  README.md  basic_usage.py  comm_selftest_cell.py  demo.ipynb  install.json  langgraph.json  metadata.json  package.json  pyproject.toml  tsconfig.json
007-jupyterlab-sidebar-chatbot/docker-repro/: Dockerfile  README.md  docker-compose.yml  pw_record.py  rec_001.py  rec_002.py  rec_003.py  rec_004.py  rec_005.py  rec_006.py  rec_007.py  rec_008.py
007-jupyterlab-sidebar-chatbot/jlab_sidebar_chatbot/: __init__.py  _version.py  comm.py  graph.py  llm.py  server.py
007-jupyterlab-sidebar-chatbot/src/: handler.ts  index.ts  kernelClient.ts  widget.ts
007-jupyterlab-sidebar-chatbot/style/: base.css  index.css  index.js
007-langgraph-sidebar-chat/: LICENSE  README.md  demo.ipynb  metadata.json  sidebar_chat.py
007-sql-codemirror-runner/: README.md  _template.py  metadata.json  sql_codemirror.py
007-sql-codemirror-runner/examples/: basic_usage.py  demo.ipynb
007-sql-tui-runner/: README.md  basic_usage.py  metadata.json  sql_tui.py
007-sql-tui-runner/examples/: basic_usage.py
008-sql-tui-runner/: README.md  metadata.json  sql_tui.py
008-standalone-comm-chatbot/: LICENSE  README.md  chat.html  metadata.json
references/: README.md
references/allowed-stacks/: default.yaml
