# 빌드 시스템: hatchling + hatch-jupyter-builder
# `pip install .` 하면 hatch-jupyter-builder 가 jlpm(빌드)로 프론트엔드를 만든 뒤
# 그 산출물(labextension)과 서버 익스텐션을 함께 wheel 로 패키징합니다.
[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "jlab_sidebar_chatbot"
description = "JupyterLab 우측 사이드바 챗봇 (Mock LLM + 교체 가능한 어댑터)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Code Conversion Agent" }]
keywords = ["Jupyter", "JupyterLab", "JupyterLab4"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
# 두뇌 = deepagents(langgraph) + Claude. ⚠️ 온라인/개발 전용(외부망 + httpx 계열).
# 폐쇄망에서는 이 의존성을 사내 LLM 스택으로 바꿔서 빌드하세요.
dependencies = [
  "deepagents>=0.4.5",
  "langchain-anthropic>=0.1.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "jlab_sidebar_chatbot/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jlab_sidebar_chatbot/labextension"]
exclude = [".github", "node_modules", "lib", "demo.ipynb"]

[tool.hatch.build.targets.wheel.shared-data]
"jlab_sidebar_chatbot/labextension" = "share/jupyter/labextensions/jlab-sidebar-chatbot"
"install.json" = "share/jupyter/labextensions/jlab-sidebar-chatbot/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jlab_sidebar_chatbot/labextension/static/style.js",
  "jlab_sidebar_chatbot/labextension/package.json"
]
skip-if-exists = ["jlab_sidebar_chatbot/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jlab_sidebar_chatbot/labextension"
