# 빌드 시스템: hatchling + hatch-jupyter-builder
# `pip install .` 하면 hatch-jupyter-builder 가 jlpm(빌드)로 프론트엔드를 만든 뒤
# 그 산출물(labextension)과 서버 익스텐션을 함께 wheel 로 패키징합니다.
[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "jlab_sidebar_chatbot"
description = "JupyterLab 우측 사이드바 챗봇 (deepagents/langgraph + OpenAI 호환 모델 — 실 OpenAI / 사내 vLLM)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Code Conversion Agent" }]
keywords = ["Jupyter", "JupyterLab", "JupyterLab4"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
# 런타임 의존성 없음 — wheel 은 코드만 담습니다. 폐쇄망에서 사용자가 직접 설치하세요:
#   pip install deepagents langchain-openai   # provider="openai"(기본): 실 OpenAI / 사내 vLLM
#   pip install langchain-ollama              # provider="ollama"(선택): 로컬 Ollama 네이티브
#   (langchain·langchain-anthropic 등은 deepagents 가 의존성으로 자동 설치됨)
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "jlab_sidebar_chatbot/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jlab_sidebar_chatbot/labextension"]
exclude = [".github", "node_modules", "lib", "demo.ipynb"]

[tool.hatch.build.targets.wheel]
exclude = ["**/.ipynb_checkpoints", "**/__pycache__"]

[tool.hatch.build.targets.wheel.shared-data]
# labextension 디렉토리(build:prod 산출물)와 루트 install.json 을 각각 매핑합니다.
# ⚠️ build:prod 는 labextension/ 를 깨끗이 재생성하며 install.json 을 거기에 두지
#    않으므로, install.json 은 반드시 아래 줄로 따로 넣어야 합니다.
#    (과거: 옛 빌드가 labextension/install.json 을 남긴 채 아래 줄도 있으면 같은
#     경로 중복으로 hatchling 빌드 실패 → 항상 build:prod 로 깨끗이 빌드한 뒤 패키징할 것.)
"jlab_sidebar_chatbot/labextension" = "share/jupyter/labextensions/jlab-sidebar-chatbot"
"install.json" = "share/jupyter/labextensions/jlab-sidebar-chatbot/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jlab_sidebar_chatbot/labextension/static/style.js",
  "jlab_sidebar_chatbot/labextension/package.json"
]
skip-if-exists = ["jlab_sidebar_chatbot/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jlab_sidebar_chatbot/labextension"
